--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -11,7 +11,9 @@
     that are going to primarily use a Tabbed UI.
   </p>
   <p>
-    Take a look at the <code>src/pages/</code> directory to add or change tabs,
-    update any existing page or create new pages.
+    Here men from the planet Earth first set foot upon the Moon. July 1969 AD. We came in peace for all mankind.
+  </p>
+  <p>
+     When I orbited the Earth in a spaceship, I saw for the first time how beautiful our planet is. Mankind, let us preserve and increase this beauty, and not destroy it!
   </p>
 </ion-content>
