Implementação Fluxo de pagina Login-Cadastra user

--- a/src/pages/cadastrar-peso/cadastrar-peso.html
+++ b/src/pages/cadastrar-peso/cadastrar-peso.html
@@ -1,9 +1,3 @@
-<!--
-  Generated template for the CadastrarPesoPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
 
   <ion-navbar>
@@ -14,10 +8,12 @@
 
 
 <ion-content padding>
-  <ion-item>
-    <ion-label floating>Peso</ion-label>
-    <ion-input type="text" [(ngModel)]="pesos.peso"></ion-input>
-  </ion-item>
+  <div class="corpo">
+    <ion-item>
+      <ion-label floating>Peso</ion-label>
+      <ion-input type="text" [(ngModel)]="pesos.peso"></ion-input>
+    </ion-item>
+  </div>
 
   <p>
     <button ion-button full (click)="savePeso(pesos)">Cadastrar Peso</button>
