--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -10,33 +10,25 @@
 </ion-header>
 
 <ion-content padding>
-  
-    <ion-fab top right edge>
-      <button ion-fab mini><ion-icon name="add"></ion-icon></button>
-      <ion-fab-list>
-        <button ion-fab><ion-icon name="link"></ion-icon></button>
-      </ion-fab-list>
-    </ion-fab>
-  
+
   <!--Gráfico de linha-->
-  <fusioncharts
-      width="360" 
-      height="300"
-      type="scrollline2d"
-      dataFormat="JSON"
-      [dataSource]=dataSource>
+  <fusioncharts width="360" height="300" type="scrollline2d" dataFormat="JSON" [dataSource]=dataSource>
   </fusioncharts>
-  
-  <h3>Peso Atual {{pesoAtual}}</h3>
-  
+
+  <!--Peso Atual-->
+  <div class="principal">
+      <div class="coluna-1">Peso Atual</div>
+      <div class="coluna-2"><div id="circulo"> {{pesoAtual}} Kg </div></div>
+ </div>
   <br />
-  <p>
-  <!--Lista de Pesos-->
-  <ion-list>
-    <button ion-item *ngFor="let p of pesos" (click)="delPeso(p.id)">
-      {{p.id}} - {{ p.peso }} Kg - {{ p.datapesagem }}
-    </button>
-  </ion-list></p>
   
-  </ion-content>
+    <!--Lista de Pesos-->
   
+    <h5>Lista de Pesos:</h5>
+    <ion-list>
+      <button ion-item *ngFor="let p of pesos" (click)="showConfirmDelPeso(p.id)">
+        <b>{{ p.peso }} Kg</b> em {{ p.datapesagem }}
+      </button>
+    </ion-list>
+
+</ion-content>
