--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -1,6 +1,6 @@
 <ion-tabs>
   <ion-tab [root]="tab1Root" tabTitle="Visualizar Histórico" tabIcon="paper"></ion-tab>
   <ion-tab [root]="tab2Root" tabTitle="Registrar Peso" tabIcon="body"></ion-tab>
-  <ion-tab [root]="tab3Root" tabTitle="Cadastrar User" tabIcon="paper"></ion-tab>
+  <!--ion-tab [root]="tab3Root" tabTitle="Cadastrar User" tabIcon="paper"></ion-tab-->
   <ion-tab [root]="tab4Root" tabTitle="Sincronizar" tabIcon="md-bluetooth"></ion-tab>
 </ion-tabs>
