--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -8,6 +8,9 @@
 
 
 <ion-content padding>
+  <br>
+  <br>
+  <br>
     <ion-item>
         <ion-label floating>User</ion-label>
         <ion-input type="text"></ion-input>
@@ -18,8 +21,8 @@
           <ion-input type="password"></ion-input>
         </ion-item>
 
-    <p><button ion-button full (click)="goToTabsPage()">Continuar</button></p>
+    <p><button ion-button full (click)="goToTabsPage()">Entrar</button></p>
     
-      <h4 (click)="cadastrar()">Criar conta</h4>
+      <p id="linkCriarConta" (click)="cadastrar()">Ou criar uma conta</p>
 
 </ion-content>
