--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -1,5 +1,5 @@
 <ion-tabs>
   <ion-tab [root]="tab1Root" tabTitle="Home" tabIcon="home"></ion-tab>
-  <ion-tab [root]="tab2Root" tabTitle="Visualizar Histórico" tabIcon="paper"></ion-tab>
+  <!-- <ion-tab [root]="tab2Root" tabTitle="Visualizar Histórico" tabIcon="paper"></ion-tab> -->
   <ion-tab [root]="tab4Root" tabTitle="Sincronizar" tabIcon="md-bluetooth"></ion-tab>
 </ion-tabs>
