--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -10,15 +10,8 @@
 </ion-header>
 
 <ion-content padding>
-  <h2>Welcome to Ionic!</h2>
+  <h2>Bem vindo ao MyBalance</h2>
   <p>
-    This starter project comes with simple tabs-based layout for apps that are going to primarily use a Tabbed UI.
-  </p>
-  <p>
-    Here men from the planet Earth first set foot upon the Moon. July 1969 AD. We came in peace for all mankind.
-  </p>
-  <p>
-    When I orbited the Earth in a spaceship, I saw for the first time how beautiful our planet is. Mankind, let us preserve and
-    increase this beauty, and not destroy it!
+    Este é um aplicativo para que você acompanhe suas pesagens de uma forma prática e rápida.
   </p>
 </ion-content>
