--- a/src/pages/editar/editar.html
+++ b/src/pages/editar/editar.html
@@ -5,84 +5,79 @@
   Ionic pages and navigation.
 -->
 <ion-header>
-  
-    <ion-navbar>
-      <button ion-button menuToggle icon-only>
-        <ion-icon name='menu'></ion-icon>
-      </button>
-      <ion-title>
-        Editar Perfil
-      </ion-title>
-    </ion-navbar>
-  
-  </ion-header>
-  
-  
-  <ion-content padding>
-    <ion-list>
+
+  <ion-navbar>
+    <button ion-button menuToggle icon-only>
+      <ion-icon name='menu'></ion-icon>
+    </button>
+    <ion-title>
+      Editar Perfil
+    </ion-title>
+  </ion-navbar>
+
+</ion-header>
+
+
+<ion-content padding>
+  <ion-list>
+    <form [formGroup]="formularioEdit">
       <!-- Escrever Nome -->
-      <ion-item>
+      <ion-item [class.valid]="formularioEdit.controls.nome.valid" [class.invalid]="!formularioEdit.controls.nome.valid && (formularioEdit.controls.nome.dirty || submitAttempt)">
         <ion-label stacked>Nome Completo</ion-label>
-        <ion-input type="text" [(ngModel)]="usuario.nome"></ion-input>
+        <ion-input type="text" formControlName="nome"></ion-input>
       </ion-item>
-  
+
       <!-- Escrever E-mail -->
-      <ion-item>
+      <ion-item [class.valid]="formularioEdit.controls.email.valid" [class.invalid]="!formularioEdit.controls.email.valid && (formularioEdit.controls.email.dirty || submitAttempt)">
         <ion-label stacked>E-mail</ion-label>
-        <ion-input type="email" [(ngModel)]="usuario.email"></ion-input>
+        <ion-input disabled type="email" formControlName="email"></ion-input>
       </ion-item>
-  
+
       <!-- Escrever Data de Nascimento -->
-      <ion-item>
+      <ion-item [class.valid]="formularioEdit.controls.datanascimento.valid" [class.invalid]="!formularioEdit.controls.datanascimento.valid && (formularioEdit.controls.datanascimento.dirty || submitAttempt)">
         <ion-label stacked>Data de nascimento</ion-label>
-        <ion-input type="date" [(ngModel)]="usuario.datanascimento" placeholder=""></ion-input>
+        <ion-input type="date" formControlName="datanascimento" placeholder=""></ion-input>
       </ion-item>
-  
-      <!-- Escrever CPF -->
-      <ion-item>
-        <ion-label stacked>CPF</ion-label>
-        <ion-input type="text" [(ngModel)]="usuario.cpf" maxlength="11"></ion-input>
-      </ion-item>
-  
+
       <!-- Escrever Senha -->
-      <ion-item>
+      <ion-item [class.valid]="formularioEdit.controls.senha.valid" [class.invalid]="!formularioEdit.controls.senha.valid && (formularioEdit.controls.senha.dirty || submitAttempt)">
         <ion-label stacked>Senha (6-12 caracteres)</ion-label>
-        <ion-input type="password" [(ngModel)]="usuario.senha" minlength="6" maxlength="12"></ion-input>
+        <ion-input type="password" formControlName="senha" minlength="6" maxlength="12"></ion-input>
       </ion-item>
-  
+
       <!-- Escrever Senha -->
-      <ion-item>
+      <ion-item [class.valid]="formularioEdit.controls.repetir_senha.valid" [class.invalid]="!formularioEdit.controls.repetir_senha.valid && (formularioEdit.controls.repetir_senha.dirty || submitAttempt)">
         <ion-label stacked>Repetir Senha</ion-label>
-        <ion-input type="password" [(ngModel)]="repetir_senha" minlength="6" maxlength="12"></ion-input>
+        <ion-input [disabled]="!formularioEdit.controls.senha.touched" type="password" formControlName="repetir_senha" minlength="6" maxlength="12"></ion-input>
       </ion-item>
-  
+
       <!-- Escrever Altura -->
-      <ion-item>
+      <ion-item [class.valid]="formularioEdit.controls.altura.valid" [class.invalid]="!formularioEdit.controls.altura.valid && (formularioEdit.controls.altura.dirty || submitAttempt)">
         <ion-label stacked>Altura (cm)</ion-label>
-        <ion-input type="number" placeholder [(ngModel)]="usuario.altura"></ion-input>
+        <ion-input type="number" placeholder formControlName="altura"></ion-input>
       </ion-item>
-  
+
       <br/>
       <!-- Seleção de Sexo -->
-      <ion-item>
+      <ion-item [class.valid]="formularioEdit.controls.sexo.valid" [class.invalid]="!formularioEdit.controls.sexo.valid && (formularioEdit.controls.sexo.dirty || submitAttempt)">
         <ion-label>Sexo</ion-label>
-        <ion-select [(ngModel)]="usuario.sexo">
-          <ion-option value="M">Masculino</ion-option>
+        <ion-select formControlName="sexo">
+          <ion-option value="M" checked="true">Masculino</ion-option>
           <ion-option value="F">Feminino</ion-option>
         </ion-select>
       </ion-item>
-    </ion-list>
-    <br/>
-    <button ion-button icon-left block color="secondary" type="submit" (click)="onSubmit()">
-      <ion-icon name="md-checkmark"></ion-icon>
-      Confirmar Edição
-    </button>
-    <br/>
-    <br/>
+    </form>
+  </ion-list>
+  <br/>
+  <button ion-button icon-left block color="secondary" type="submit" (click)="onSubmit()">
+    <ion-icon name="md-checkmark"></ion-icon>
+    Confirmar Edição
+  </button>
+  <br/>
+  <br/>
 
-    <button ion-button icon-left block color="danger" type="submit" (click)="exluirConta()">
-      <ion-icon name="md-trash"></ion-icon>
-      Excluir conta
-    </button>
-  </ion-content>
-  
+  <button ion-button icon-left block color="danger" type="submit" (click)="exluirConta()">
+    <ion-icon name="md-trash"></ion-icon>
+    Excluir conta
+  </button>
+</ion-content>
