--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -6,7 +6,7 @@
 -->
 
 <ion-content padding>
-    <img id="logo-login" src="../../assets/image/logo.png">
+    <img id="logo-login" src="assets/image/logo.png">
 
 
     <!-- Escrever E-mail -->
