Atualização no template de apresentação das notificações

--- a/src/pages/notification/notification.html
+++ b/src/pages/notification/notification.html
@@ -27,7 +27,7 @@
   </ion-card>
   <div padding>
     <button ion-button block color="danger" (click)="limparNotifications()">
-      <ion-icon name="md-trash"></ion-icon>
+      <ion-icon name="md-trash" style="margin-right: 5px"></ion-icon>
       Limpar
     </button>
   </div>
